// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with pageTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
}

.emotion-0 strong,
.emotion-0 b {
  font-weight: 700;
}

.emotion-0 a {
  color: #5C6C75;
}

.emotion-1 {
  font-size: 13px;
}

.emotion-1:last-of-type {
  color: #1C2D38;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover:not(:last-of-type),
.emotion-1:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-3 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
}

.emotion-3:focus {
  outline: none;
}

.emotion-4 {
  position: relative;
}

.emotion-4::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.lg-ui-caafdc5a:focus .emotion-4::after {
  background-color: #0498EC;
}

.lg-ui-caafdc5a:hover .emotion-4::after {
  background-color: #E8EDEB;
}

.emotion-5 {
  cursor: default;
}

.emotion-5:last-of-type {
  color: #1C2D38;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  font-size: 13px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8>code {
  color: #016BF8;
}

.emotion-8::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-8:focus .emotion-8::after {
  background-color: #0498EC;
}

.emotion-8:hover::after {
  background-color: #E8EDEB;
}

.emotion-8:last-of-type {
  color: #1C2D38;
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:hover:not(:last-of-type),
.emotion-8:focus:not(:last-of-type) {
  color: #1C2D38;
}

<p
    class="emotion-0"
  >
    <a
      class="lg-ui-caafdc5a emotion-1 emotion-2 emotion-3"
      href="https://www.mongodb.com/docs/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="emotion-4"
      >
        Docs Home
      </span>
    </a>
    <span
      class="emotion-5 emotion-6"
    >
       → 
    </span>
    <a
      class="emotion-2 emotion-8 emotion-9"
      href="/view-analyze/"
    >
      View & Analyze Data
    </a>
  </p>
</DocumentFragment>
`;

exports[`renders correctly with siteTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
}

.emotion-0 strong,
.emotion-0 b {
  font-weight: 700;
}

.emotion-0 a {
  color: #5C6C75;
}

.emotion-1 {
  font-size: 13px;
}

.emotion-1:last-of-type {
  color: #1C2D38;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover:not(:last-of-type),
.emotion-1:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-3 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
}

.emotion-3:focus {
  outline: none;
}

.emotion-4 {
  position: relative;
}

.emotion-4::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.lg-ui-caafdc5a:focus .emotion-4::after {
  background-color: #0498EC;
}

.lg-ui-caafdc5a:hover .emotion-4::after {
  background-color: #E8EDEB;
}

.emotion-5 {
  cursor: default;
}

.emotion-5:last-of-type {
  color: #1C2D38;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  font-size: 13px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8>code {
  color: #016BF8;
}

.emotion-8::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-8:focus .emotion-8::after {
  background-color: #0498EC;
}

.emotion-8:hover::after {
  background-color: #E8EDEB;
}

.emotion-8:last-of-type {
  color: #1C2D38;
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:hover:not(:last-of-type),
.emotion-8:focus:not(:last-of-type) {
  color: #1C2D38;
}

<p
    class="emotion-0"
  >
    <a
      class="lg-ui-caafdc5a emotion-1 emotion-2 emotion-3"
      href="https://www.mongodb.com/docs/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="emotion-4"
      >
        Docs Home
      </span>
    </a>
    <span
      class="emotion-5 emotion-6"
    >
       → 
    </span>
    <a
      class="emotion-2 emotion-8 emotion-9"
      href="/"
    >
      MongoDB Compass
    </a>
  </p>
</DocumentFragment>
`;
